--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <title>滑雪 CP 值動態試算 (Google Sheets 串接版)</title>
+    <title>どこ滑る？</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
 </head>
@@ -51,13 +51,13 @@
     
     <div class="max-w-6xl mx-auto">
         <header class="mb-8 text-center">
-            <h1 class="text-3xl font-bold text-slate-800">⛷️ 滑雪價格計算</h1>
-            <p id="status" class="text-blue-500 mt-2 font-medium">正在從 Google 試算表同步數據...</p>
+            <h1 class="text-3xl font-bold text-slate-800">⛷️ 最強スキー計画クン</h1>
+            <p id="status" display="none" class="text-blue-500 mt-2 font-medium">正在從 Google 試算表同步數據...</p>
         </header>
 
         <div class="grid grid-cols-1 lg:grid-cols-4 gap-6 items-start">
             <div class="lg:col-span-1 bg-white p-6 rounded-xl shadow-sm border border-slate-200">
-                <h3 class="font-bold text-lg mb-4 border-b pb-2">自定義方案</h3>
+                <h3 class="font-bold text-lg mb-4 border-b pb-2">滑雪方案</h3>
                 <div class="space-y-6">
                     <div>
                         <label class="block text-sm font-medium text-slate-700 mb-2">滑雪天數</label>
@@ -79,7 +79,7 @@
                     <div>
                         <label class="block text-sm font-medium text-slate-700 mb-2">裝備租借 (板+靴)</label>
                         <div class="flex flex-col gap-2" id="hardware-group">
-                            <button onclick="setHardware('none', this)" class="btn-toggle active-btn text-left">不租借硬體</button>
+                            <button onclick="setHardware('none', this)" class="btn-toggle active-btn text-left">不租借</button>
                             <button onclick="setHardware('full', this)" class="btn-toggle text-left">全套 (板+靴+衣+褲)</button>
                             <button onclick="setHardware('ski_set', this)" class="btn-toggle text-left">Ski 套裝 (板+靴)</button>
                             <button onclick="setHardware('ski_pole', this)" class="btn-toggle text-left">Ski 三件組 (板+靴+杖)</button>
